[package]
name = "diesel-test"
version = "0.1.0"
authors = ["xclusive1111 <son.nheo35@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
