[package]
name = "restful"
version = "0.1.0"
authors = ["xclusive1111 <son.nheo35@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.6"
mysql = "*"
serde = { version = "1.0", features = ["derive"] }
